# rxing-reader

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
rxing-cli/: Cargo.toml
rxing-cli/src/: json_view.rs  main.rs
rxing-reader/: Cargo.toml
rxing-reader/src/: barcode_format.rs  binarizer.rs  binary_bitmap.rs  decode.rs  decode_hints.rs  dimension.rs  error.rs  json_view.rs  lib.rs  luma_luma_source.rs  luma_source.rs  luminance_source.rs  point.rs  result_point.rs  result_point_utils.rs  rxing_result.rs  rxing_result_metadata.rs  rxing_result_point.rs
rxing-reader/src/common/: bit_array.rs  bit_matrix.rs  bit_source.rs  bit_source_builder.rs  character_set.rs  decoder_rxing_result.rs  default_grid_sampler.rs  eci.rs  eci_encoder_set.rs  eci_input.rs  eci_string_builder.rs  global_histogram_binarizer.rs  grid_sampler.rs  hybrid_binarizer.rs  minimal_eci_input.rs  mod.rs  perspective_transform.rs  quad.rs  string_utils.rs
rxing-reader/src/common/cpp_essentials/: bitmatrix_cursor_trait.rs  byte_matrix.rs  concentric_finder.rs  decoder_result.rs  dm_regression_line.rs  edge_tracer.rs  fast_edge_to_edge_counter.rs  matrix.rs  mod.rs  pattern.rs  regression_line.rs  regression_line_trait.rs  util.rs
rxing-reader/src/common/detect/: bitmatrix_cursor_trait.rs  concentric_finder.rs  decoder_result.rs  direction.rs  edge_tracer.rs  fast_edge_to_edge_counter.rs  matrix.rs  mod.rs  pattern.rs  regression_line.rs  regression_line_trait.rs  unoriented_regression_line.rs  util.rs  value.rs
rxing-reader/src/common/detector/: monochrome_rectangle_detector.rs  white_rectangle_detector.rs
rxing-reader/src/qrcode/: error_correction_level.rs  format_information.rs  mod.rs  mode.rs  reader.rs  reed_solomon.rs  version.rs  version_build_versions_arrays.rs
rxing-reader/src/qrcode/common/: error_correction_level.rs  format_information.rs  mod.rs  mode.rs  version.rs  version_build_versions_arrays.rs
rxing-reader/src/qrcode/cpp_port/: bitmatrix_parser.rs  data_mask.rs  decoder.rs  detector.rs  detector_result.rs  mod.rs  qr_cpp_reader.rs
rxing-reader/src/qrcode/decoder/: bit_matrix_parser.rs  data_block.rs  data_mask.rs  decoded_bit_stream_parser.rs  qr_code_decoder_meta_data.rs  qrcode_decoder.rs
rxing-reader/src/qrcode/detector/: alignment_pattern.rs  alignment_pattern_finder.rs  finder_pattern.rs  finder_pattern_finder.rs  finder_pattern_info.rs  qrcode_detector.rs
rxing-reader/src/qrcode/reader/: bitmatrix_parser.rs  decoder.rs  detector.rs
rxing-reader/tests/: qr_decode.rs
rxing-reader/tests/fixtures/: regen_synthetic.sh
rxing-reader/tests/fixtures/fast_qr/: README.md
rxing-vendored/: Cargo.toml
rxing-vendored/src/: barcode_format.rs  binarizer.rs  binary_bitmap.rs  decode.rs  decode_hints.rs  dimension.rs  error.rs  exceptions.rs  lib.rs  luma_luma_source.rs  luminance_source.rs  result_point_utils.rs  rxing_result.rs  rxing_result_metadata.rs  rxing_result_point.rs
rxing-vendored/src/common/: bit_array.rs  bit_matrix.rs  bit_source.rs  bit_source_builder.rs  character_set.rs  decoder_rxing_result.rs  default_grid_sampler.rs  eci.rs  eci_encoder_set.rs  eci_input.rs  eci_string_builder.rs  global_histogram_binarizer.rs  grid_sampler.rs  hybrid_binarizer.rs  minimal_eci_input.rs  mod.rs  pattern_reader.rs  perspective_transform.rs  quad.rs  string_utils.rs
rxing-vendored/src/common/cpp_essentials/: bitmatrix_cursor_trait.rs  byte_matrix.rs  concentric_finder.rs  decoder_result.rs  dm_regression_line.rs  edge_tracer.rs  fast_edge_to_edge_counter.rs  matrix.rs  mod.rs  pattern.rs  regression_line.rs  regression_line_trait.rs  util.rs  value.rs
rxing-vendored/src/common/detector/: monochrome_rectangle_detector.rs  white_rectangle_detector.rs
rxing-vendored/src/common/reedsolomon/: generic_gf.rs  generic_gf_poly.rs  mod.rs  reedsolomon_decoder.rs  reedsolomon_encoder.rs
rxing-vendored/src/qrcode/: mod.rs
rxing-vendored/src/qrcode/common/: error_correction_level.rs  format_information.rs  mode.rs  version.rs  version_build_versions_arrays.rs
rxing-vendored/src/qrcode/cpp_port/: bitmatrix_parser.rs  data_mask.rs  decoder.rs  detector.rs  mod.rs  qr_cpp_reader.rs  qr_type.rs
rxing-vendored/src/qrcode/decoder/: bit_matrix_parser.rs  data_block.rs  data_mask.rs  decoded_bit_stream_parser.rs  mod.rs  qrcode_decoder.rs
rxing-vendored/src/qrcode/detector/: alignment_pattern.rs  alignment_pattern_finder.rs  finder_pattern.rs  (+5 more)
rxing-vendored/tests/: qr_decode.rs
rxing-wasm/: .gitignore  Cargo.toml  package-lock.json  package.json
rxing-wasm/src/: lib.rs
(+14 files in other folders)
