[package]
name = "rxing-cli"
version.workspace = true
description = "Command-line QR decoder built on rxing-reader."
license = "Apache-2.0"
edition = "2024"

[[bin]]
name = "rxing-cli"
path = "src/main.rs"

[dependencies]
rxing-reader = { path = "../rxing-reader" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ureq = { version = "2.10", features = ["tls"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
