[package]
name = "rxing-reader"
version.workspace = true
description = "Trimmed QR reading-only fork of rxing v0.9.0 for rxing-wasm."
license = "Apache-2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bitvec = { version = "1", default-features = false, features = ["alloc"] }
once_cell = "1.21"
encoding_rs = "0.8"
codepage-437 = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "wasmbind"] }
multimap = "0.10"
num = "0.4"
thiserror = "2.0"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
