[package]
name = "rxing-wasm"
version.workspace = true
edition = "2024"
description = "WASM QR reader wrapper around the trimmed rxing crate."
license = "Apache-2.0"
repository = "https://github.com/andrewtheguy/rxing-reader"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rxing-reader = { path = "../rxing-reader" }
